--- a/mirrorfashion/produto.html
+++ b/mirrorfashion/produto.html
@@ -67,7 +67,45 @@
                         <input type="range" min="36" max="64" value="42" step="2" name="tamanho" id="tamanho">
                         <output for="tamanho">48</output>
                     </fieldset>
+                    <button class="comprar">
+                        Comprar
+                    </button>
                 </form>
+            </div>
+            <div class="detalhes">
+                <h4>Detalhes do Produto</h4>
+                <p>
+                    Esse é o melhor casado de Cardigã que você já viu.
+                    Excelente material italiano com estampa desenhada
+                    pelos artesãos da comunidade de Krotor nas ilhas gregas.
+                    Compre já e receba hoje mesmo pela nossa entrega a jato.
+                </p>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Característica</th>
+                            <th>Detalhe</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Modelo</td>
+                            <td>Cardigã 7845</td>
+                        </tr>
+                        <tr>
+                            <td>Material</td>
+                            <td>Aldogão</td>
+                        </tr>
+                        <tr>
+                            <td>Cores</td>
+                            <td>Azul, rosa e verde</td>
+                        </tr>
+                        <tr>
+                            <td>Lavagem</td>
+                            <td>Lavar a mão</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
 
         </article>
@@ -87,7 +125,6 @@
             </nav>
         </div>
     </footer>
-
     <!--Fim do Rodapé do Site-->
 </body>
 
