Criar e estilizar com bootstrap página de checkout

--- a/mirrorfashion/index.html
+++ b/mirrorfashion/index.html
@@ -51,7 +51,15 @@
                 <nav class="menu-departamentos">
                     <h2>Menu Departamentos</h2>
                     <ul>
-                        <li><a href="#">Blusas e Camisas</a></li>
+                        <li><a href="#">Blusas e Camisas</a>
+                        <ul>
+                            <li><a href="#">Item 1</a></li>
+                            <li><a href="#">Item 2</a></li>
+                            <li><a href="#">Item 3</a></li>
+                            <li><a href="#">Item 4</a></li>
+                            <li><a href="#">Item 5</a></li>
+                        </ul>
+                        </li>
                         <li><a href="#">Calças</a></li>
                         <li><a href="#">Saias</a></li>
                         <li><a href="#">Vestidos</a></li>
@@ -196,6 +204,9 @@
     </footer>
 
     <!--Fim do Rodapé do Site-->
+    <script src="js/jquery.js"></script>
+    <script src="js/home.js"></script>
+    <script src="js/banner.js"></script>
 </body>
 
 </html>
