--- a/mirrorfashion/checkout.html
+++ b/mirrorfashion/checkout.html
@@ -37,7 +37,7 @@
                             <dd>40</dd>
 
                             <dt>Preço</dt>
-                            <dd>R$ 129,90</dd>
+                            <dd id="preco">R$ 129,90</dd>
                         </dl>
                     </div>
                 </div>
@@ -70,7 +70,7 @@
                         </div>
                         <div class="form-group">
                             <label for="cpf">CPF:</label>
-                            <input type="text" id="cpf" class="form-control">
+                            <input type="text" id="cpf" class="form-control" data-mask="999.999.999-99">
                         </div>
                         <div class="form-group custom-control custom-checkbox">
                             <input type="checkbox" class="custom-control-input" id="news" checked>
@@ -103,5 +103,8 @@
             </form>
         </div>
     </section>
+    <script src="js/jquery.js"></script>
+    <script src="js/inputmask-plugin.js"></script>
+    <script src="js/total.js"></script>
 </body>
 </html>
