--- a/mirrorfashion/contato.html
+++ b/mirrorfashion/contato.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/geral.css">
     <link rel="stylesheet" href="css/contato.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
     <title>Mirror Fashion | Contato</title>
 </head>
 
@@ -59,7 +60,10 @@
                         <strong>Mensagem:</strong><br>
                         <textarea name="mensagem" placeholder="Digite sua mensagem" rows="6"></textarea><br>
                     </label>
-                    <button type="submit" class="btn">Enviar</button>
+                    <button type="submit" class="btn">
+                        <i class="far fa-paper-plane"></i>
+                        Enviar
+                    </button>
                 </form>
                 <aside class="painel-contato">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29346.49327650842!2d-49.98584848864497!3d-23.158822625021312!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c026544d26f253%3A0xc66dac11dad56f73!2sJacarezinho%2C+State+of+Paran%C3%A1%2C+86400-000!5e0!3m2!1sen!2sbr!4v1564843327721!5m2!1sen!2sbr" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
